:sparkles: Add drizzle theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -56,6 +56,14 @@ grtskTeraThin()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 100
 
+grtskTeraThinBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 100, 'slnt' -15
+  +noVariable()
+    font-family: GrtskTeraBkslnt, Helvetica, sans-serif
+    font-weight: 100
+
 grtskTeraExtraLight()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -183,6 +191,14 @@ grtskExaThin()
     font-variation-settings: 'wdth' 200, 'wght' 100, 'slnt' 0
   +noVariable()
     font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 100
+
+grtskExaThinBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 100, 'slnt' -15
+  +noVariable()
+    font-family: GrtskExaBkslnt, Helvetica, sans-serif
     font-weight: 100
 
 grtskExaExtralight()
