--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -82,6 +82,13 @@
 }
 
 @font-face {
+  font-family: "GrtskTeraBkslnt";
+  src:  url("/assets/fonts/GrtskTeraBkslnt-Thin.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTeraBkslnt-Thin.otf") format("opentype");
+  font-weight: 100;
+}
+
+@font-face {
   font-family: "GrtskTera";
   src:  url("/assets/fonts/GrtskTera-Extralight.woff2") format("woff2"),
   url("/assets/fonts/GrtskTera-Extralight.otf") format("opentype");
@@ -194,6 +201,13 @@
     url("/assets/fonts/GrtskExa-ThinItalic.otf") format("opentype");
   font-weight: 100;
   font-style: italic;
+}
+
+@font-face {
+  font-family: "GrtskExaBkslnt";
+  src:  url("/assets/fonts/GrtskExaBkslnt-Thin.woff2") format("woff2"),
+  url("/assets/fonts/GrtskExaBkslnt-Thin.otf") format("opentype");
+  font-weight: 100;
 }
 
 @font-face {
