--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -14,6 +14,7 @@
 @import './themes/night.styl'
 @import './themes/windy.styl'
 @import './themes/mixed-rain-and-snow.styl'
+@import './themes/drizzle.styl'
 
 html, body
   height: 100%
