:sparkles: Add thunderstorms and tornado themes

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -15,6 +15,7 @@
 @import './themes/windy.styl'
 @import './themes/mixed-rain-and-snow.styl'
 @import './themes/drizzle.styl'
+@import './themes/thunderstorms.styl'
 
 html, body
   height: 100%
