:lipstick: Add city drop-down's arrow

--- a/src/components/menu/styles.styl
+++ b/src/components/menu/styles.styl
@@ -11,6 +11,7 @@
   color: white
   box-shadow: 0 pxToRem(20) pxToRem(20) rgba(23, 23, 23, 0.2)
   border-radius: pxToRem(5)
+  margin-top: pxToRem(10)
   &Input
     height: pxToRem(55)
     border-bottom: pxToRem(1) solid white
