--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -29,6 +29,15 @@
 
 .secondRowMobile
   mobileOnly()
+  .arrow
+  .arrowReversed
+    width: pxToRem(10)
+    height: pxToRem(7)
+
+.city
+  position: relative
+  display: inline-block
+  user-select: none
 
 .thirdRow
   margin-top: pxToRem(10)
@@ -60,3 +69,20 @@
 .secondRowBox
   position: relative
   cursor: pointer
+
+.arrow
+  position: absolute
+  left: 100% + pxToRem(25)
+  margin-left: pxToRem(10)
+  top: 50%
+  transform: translateY(-50%)
+  width: pxToRem(18)
+  height: pxToRem(11)
+  +mobile()
+    margin-left: pxToRem(5)
+  > svg
+    display: block
+
+.arrowReversed
+  @extends .arrow
+  transform: translateY(-50%) scale(1, -1)
