:sparkles: Add hail and haze themes

--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -29,6 +29,13 @@
 }
 
 @font-face {
+  font-family: "GrtskGigaBkslnt";
+  src:  url("/assets/fonts/GrtskGigaBkslnt-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskGigaBkslnt-Bold.otf") format("opentype");
+  font-weight: 700;
+}
+
+@font-face {
   font-family: "GrtskMega";
   src: url("/assets/fonts/GrtskMega-Thin.woff2") format("woff2"),
     url("/assets/fonts/GrtskMega-Thin.otf") format("opentype");
@@ -150,10 +157,9 @@
 
 @font-face {
   font-family: "GrtskPetaBkslnt";
-  src:  url("/assets/fonts/GrtskPetaBkslnt-Regular.woff2") format("woff2"),
-  url("/assets/fonts/GrtskPetaBkslnt-Regular.otf") format("opentype");
-  font-weight: 400;
-  font-style: normal;
+  src:  url("/assets/fonts/GrtskPetaBkslnt-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskPetaBkslnt-Bold.otf") format("opentype");
+  font-weight: 700;
 }
 
 @font-face {
@@ -193,6 +199,13 @@
   url("/assets/fonts/GrtskZetta-Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskZettaBkslnt";
+  src:  url("/assets/fonts/GrtskZettaBkslnt-Semibold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZettaBkslnt-Semibold.otf") format("opentype");
+  font-weight: 600;
 }
 
 @font-face {
