--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -10,12 +10,13 @@
 @import './themes/snow.styl'
 @import './themes/partly-cloudy.styl'
 @import './themes/rain.styl'
-@import './themes/haze.styl'
+@import './themes/hail.styl'
 @import './themes/night.styl'
 @import './themes/windy.styl'
 @import './themes/mixed-rain-and-snow.styl'
 @import './themes/drizzle.styl'
 @import './themes/thunderstorms.styl'
+@import './themes/haze.styl'
 
 html, body
   height: 100%
