--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -32,6 +32,14 @@ grtskPetaBkslnt()
     font-family: GrtskPetaBkslnt, Helvetica, sans-serif
     font-weight: 400
 
+grtskPetaBoldBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 300, 'wght' 1000, 'slnt' -15
+  +noVariable()
+    font-family: GrtskPetaBkslnt, Helvetica, sans-serif
+    font-weight: 700
+
 grtskGiga()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -47,6 +55,14 @@ grtskGigaMediumBkslnt()
   +noVariable()
     font-family: GrtskGigaBkslnt, Helvetica, sans-serif
     font-weight: 500
+
+grtskGigaBoldBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 760, 'wght' 1000, 'slnt' -15
+  +noVariable()
+    font-family: GrtskGigaBkslnt, Helvetica, sans-serif
+    font-weight: 700
 
 grtskTeraThin()
   +variable()
@@ -136,6 +152,14 @@ grtskZettaBold()
   +noVariable()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 700
+
+grtskZettaSemiboldBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 810, 'slnt' -15
+  +noVariable()
+    font-family: GrtskZettaBkslnt, Helvetica, sans-serif
+    font-weight: 600
 
 grtskMegaThin()
   +variable()
