:sparkles: Add smoky and foggy themes

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -56,6 +56,14 @@ grtskGigaMediumBkslnt()
     font-family: GrtskGigaBkslnt, Helvetica, sans-serif
     font-weight: 500
 
+grtskGigaBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 760, 'wght' 1000, 'slnt' 0
+  +noVariable()
+    font-family: GrtskGiga, Helvetica, sans-serif
+    font-weight: 700
+
 grtskGigaBoldBkslnt()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -256,3 +264,11 @@ grtskExaRegularBkslnt()
   +noVariable()
     font-family: GrtskExaBkslnt, Helvetica, sans-serif
     font-weight: 400
+
+grtskExaBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 1000, 'slnt' 0
+  +noVariable()
+    font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 700
