--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -15,10 +15,9 @@
 
 @font-face {
   font-family: "GrtskGiga";
-  src: url("/assets/fonts/GrtskGiga-Medium.woff2") format("woff2"),
-  url("/assets/fonts/GrtskGiga-Medium.otf") format("opentype");
-  font-weight: 500;
-  font-style: normal;
+  src:  url("/assets/fonts/GrtskGiga-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskGiga-Bold.otf") format("opentype");
+  font-weight: 700;
 }
 
 @font-face {
@@ -250,4 +249,11 @@
   src: url("/assets/fonts/GrtskExaBkslnt-Regular.woff2") format("woff2"),
     url("/assets/fonts/GrtskExaBkslnt-Regular.otf") format("opentype");
   font-weight: 400;
+}
+
+@font-face {
+  font-family: "GrtskExa";
+  src:  url("/assets/fonts/GrtskExa-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskExa-Bold.otf") format("opentype");
+  font-weight: 700;
 }
