--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -17,6 +17,8 @@
 @import './themes/drizzle.styl'
 @import './themes/thunderstorms.styl'
 @import './themes/haze.styl'
+@import './themes/smoky.styl'
+@import './themes/foggy.styl'
 
 html, body
   height: 100%
