:sparkles: Add sleet theme

--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -201,10 +201,25 @@
 }
 
 @font-face {
+  font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-BoldItalic.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-BoldItalic.otf") format("opentype");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
   font-family: "GrtskZettaBkslnt";
   src:  url("/assets/fonts/GrtskZettaBkslnt-Semibold.woff2") format("woff2"),
   url("/assets/fonts/GrtskZettaBkslnt-Semibold.otf") format("opentype");
   font-weight: 600;
+}
+
+@font-face {
+  font-family: "GrtskZettaBkslnt";
+  src:  url("/assets/fonts/GrtskZettaBkslnt-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZettaBkslnt-Bold.otf") format("opentype");
+  font-weight: 700;
 }
 
 @font-face {
