--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -19,6 +19,7 @@
 @import './themes/haze.styl'
 @import './themes/smoky.styl'
 @import './themes/foggy.styl'
+@import './themes/sleet.styl'
 
 html, body
   height: 100%
