--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -161,6 +161,23 @@ grtskZettaBold()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 700
 
+grtskZettaBoldItalic()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 1000, 'slnt' 15
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 700
+    font-style: italic
+
+grtskZettaBoldBkslnt()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 1000, 'slnt' -15
+  +noVariable()
+    font-family: GrtskZettaBkslnt, Helvetica, sans-serif
+    font-weight: 700
+
 grtskZettaSemiboldBkslnt()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
