:sparkles: Add dust theme

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -20,6 +20,7 @@
 @import './themes/smoky.styl'
 @import './themes/foggy.styl'
 @import './themes/sleet.styl'
+@import './themes/dust.styl'
 
 html, body
   height: 100%
