:lipstick: Upadte loading screen styling

--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -28,9 +28,9 @@
     line-height: (53 / 72)
 
 .loadingText
+  margin-top: pxToRem(50)
   width: pxToRem(213)
   height: pxToRem(15)
-  margin-bottom: pxToRem(20)
 
 .home
   min-height: 100%
