--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -21,6 +21,7 @@
 @import './themes/foggy.styl'
 @import './themes/sleet.styl'
 @import './themes/dust.styl'
+@import './themes/loading.styl'
 
 html, body
   height: 100%
