:bug: Fix non-latin city names

--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -13,10 +13,11 @@
     padding-right: pxToRem(45)
 
 .temperature
-  width: pxToRem(245)
-  margin-right: pxToRem(30)
+  min-width: pxToRem(215)
+  margin-right: pxToRem(60)
   +mobile()
-    width: auto
+    min-width: auto
+    margin-right: 0
 
 .firstRow
   +mobile()
