:sparkles: Add menu theming

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -112,6 +112,14 @@ grtskTera()
   +noVariable()
     font-family: GrtskTera, Helvetica, sans-serif
 
+grtskTeraSemiBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 810, 'slnt' 0
+  +noVariable()
+    font-family: GrtskTera, Helvetica, sans-serif
+    font-weight: 600
+
 grtskTeraBold()
   font-weight: 700
   +variable()
