--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -118,6 +118,13 @@
 
 @font-face {
   font-family: "GrtskTera";
+  src:  url("/assets/fonts/GrtskTera-Semibold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTera-Semibold.otf") format("opentype");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "GrtskTera";
   src:  url("/assets/fonts/GrtskTera-Bold.woff2") format("woff2"),
   url("/assets/fonts/GrtskTera-Bold.otf") format("opentype");
   font-weight: 700;
