--- a/src/style/themes/cloudy.styl
+++ b/src/style/themes/cloudy.styl
@@ -52,3 +52,11 @@
 
   .try-button
     border: pxToRem(1) solid #C49FFF
+
+  menuStyle(
+    bgColor: #434250,
+    inputColor: #434250,
+    inputBgColor: #C49FFF,
+    itemsColor: #C49FFF,
+    borderColor: #C49FFF
+  )
