--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -45,3 +45,14 @@
 
   .try-button
     border: pxToRem(1) solid $BLACK
+
+  .menu
+    background-color: #FFFFE8
+    border: pxToRem(1) solid #171717
+
+    .input
+      background-color: #171717
+      color: #FFFFE8
+
+    .menuCitiesBox
+      color: #121212
