--- a/src/style/themes/drizzle.styl
+++ b/src/style/themes/drizzle.styl
@@ -55,3 +55,12 @@
 
   .try-button
     border: pxToRem(1) solid #00A7FF
+
+  menuStyle(
+    bgColor: #E0F9FF,
+    inputColor: #E0F9FF,
+    inputBgColor: #00A7FF,
+    itemsColor: #00A7FF,
+    borderColor: #00A7FF,
+    shadowColor: rgba(0, 167, 255, 0.1)
+  )
