--- a/src/style/themes/dust.styl
+++ b/src/style/themes/dust.styl
@@ -94,3 +94,11 @@
 
   .try-button
     border: pxToRem(1) solid #0A1640
+
+  menuStyle(
+    bgColor: #D5D5D5,
+    inputColor: #0A1640,
+    inputBgColor: #FFFF05,
+    itemsColor: #0A1640,
+    borderColor: #FFFF05
+  )
