--- a/src/style/themes/foggy.styl
+++ b/src/style/themes/foggy.styl
@@ -48,3 +48,11 @@
 
   .try-button
     border: pxToRem(1) solid #AFAFAF
+
+  menuStyle(
+    bgColor: #5E4662,
+    inputColor: #5E4662,
+    inputBgColor: #AFAFAF,
+    itemsColor: #AFAFAF,
+    borderColor: #AFAFAF
+  )
