--- a/src/style/themes/hail.styl
+++ b/src/style/themes/hail.styl
@@ -47,3 +47,11 @@
 
   .try-button
     border: pxToRem(1) solid #B1B1B1
+
+  menuStyle(
+    bgColor: #4A4A4A,
+    inputColor: #FFFFFF,
+    inputBgColor: #B172DE,
+    itemsColor: #B172DE,
+    borderColor: #B172DE
+  )
