--- a/src/style/themes/haze.styl
+++ b/src/style/themes/haze.styl
@@ -78,3 +78,12 @@
 
   .try-button
     border: pxToRem(1) solid #FAFAFA
+
+  menuStyle(
+    bgColor: #8F8E98,
+    inputColor: #8F8E98,
+    inputBgColor: #FAFAFA,
+    itemsColor: #F2F2F2,
+    borderColor: #D6D6D6,
+    shadowColor: rgba(0,0,0,0.1)
+  )
