--- a/src/style/themes/mixed-rain-and-snow.styl
+++ b/src/style/themes/mixed-rain-and-snow.styl
@@ -56,3 +56,14 @@
 
   .try-button
     border: pxToRem(1) solid #171717
+
+  .menu
+    background-color: #FFFBF4
+    border: pxToRem(1) solid #171717
+
+    .input
+      background-color: #171717
+      color: #FFFBF4
+
+    .menuCitiesBox
+      color: #121212
