--- a/src/style/themes/night.styl
+++ b/src/style/themes/night.styl
@@ -47,3 +47,11 @@
 
   .try-button
     border: pxToRem(1) solid #8E5D00
+
+  menuStyle(
+    bgColor: #020A26,
+    inputColor: #020A26,
+    inputBgColor: #8E5D00,
+    itemsColor: #8E5D00,
+    borderColor: #8E5D00
+  )
