--- a/src/style/themes/partly-cloudy.styl
+++ b/src/style/themes/partly-cloudy.styl
@@ -46,3 +46,12 @@
 
   .try-button
     border: pxToRem(1) solid white
+
+  menuStyle(
+    bgColor: #8895AF,
+    inputColor: #8895AF,
+    inputBgColor: #3C414B,
+    itemsColor: #3C414B,
+    borderColor: #3C414B,
+    shadowColor: rgba(60,65,75,0.1)
+  )
