--- a/src/style/themes/rain.styl
+++ b/src/style/themes/rain.styl
@@ -53,3 +53,10 @@
   .set-in-grtsk
     color: #B1B1B1
 
+  menuStyle(
+    bgColor: #0000FF,
+    inputColor: #FFFFFF,
+    inputBgColor: #0000FF,
+    itemsColor: #FFFFFF,
+    borderColor: #FFFFFF
+  )
