--- a/src/style/themes/sleet.styl
+++ b/src/style/themes/sleet.styl
@@ -4,7 +4,7 @@
 @import '../font-utils.styl'
 
 .sleet
-  background-color: white
+  background-color: #EFEFEF
   color: $BLUE
 
   // text styles
@@ -55,3 +55,12 @@
 
   .forecast
       color: $BLACK
+
+  menuStyle(
+    bgColor: #EFEFEF,
+    inputColor: #FFFFE8,
+    inputBgColor: #002CD9,
+    itemsColor: #002CD9,
+    borderColor: #002CD9,
+    shadowColor: rgba(0, 44, 217, 0.2)
+  )
