--- a/src/style/themes/smoky.styl
+++ b/src/style/themes/smoky.styl
@@ -46,3 +46,11 @@
 
   .try-button
     border: pxToRem(1) solid #AFAFAF
+
+  menuStyle(
+    bgColor: #29355F,
+    inputColor: #29355F,
+    inputBgColor: #AFAFAF,
+    itemsColor: #AFAFAF,
+    borderColor: #AFAFAF
+  )
