--- a/src/style/themes/snow.styl
+++ b/src/style/themes/snow.styl
@@ -63,3 +63,12 @@
 
   .forecast
       color: $BLACK
+
+  menuStyle(
+    bgColor: #FFFFFF,
+    inputColor: #FFFFFF,
+    inputBgColor: #002CD9,
+    itemsColor: #002CD9,
+    borderColor: #002CD9,
+    shadowColor: rgba(0, 44, 217, 0.2)
+  )
