--- a/src/style/themes/thunderstorms.styl
+++ b/src/style/themes/thunderstorms.styl
@@ -49,3 +49,11 @@
 
   .try-button
     border: pxToRem(1) solid #C1A57F
+
+  menuStyle(
+    bgColor: #171717,
+    inputColor: #171717,
+    inputBgColor: #C1A57F,
+    itemsColor: #C1A57F,
+    borderColor: #C1A57F
+  )
