--- a/src/style/themes/windy.styl
+++ b/src/style/themes/windy.styl
@@ -58,3 +58,11 @@
 
   .try-button
     border: pxToRem(1) solid #171717
+
+  menuStyle(
+    bgColor: #FFF,
+    inputColor: #FFF,
+    inputBgColor: #171717,
+    itemsColor: #121212,
+    borderColor: #171717
+  )
