--- a/src/components/menu/styles.styl
+++ b/src/components/menu/styles.styl
@@ -6,15 +6,13 @@
   position: absolute
   top: 100%
   left: 0
-  width: pxToRem(350)
-  background-color: #171717
-  color: white
-  box-shadow: 0 pxToRem(20) pxToRem(20) rgba(23, 23, 23, 0.2)
-  border-radius: pxToRem(5)
+  width: pxToRem(340)
   margin-top: pxToRem(10)
+  z-index: 100
+  +mobile()
+    width: pxToRem(320)
   &Input
     height: pxToRem(55)
-    border-bottom: pxToRem(1) solid white
     position: relative
     &Icon
       width: pxToRem(26)
@@ -22,15 +20,16 @@
       position: absolute
       left: pxToRem(18)
       top: pxToRem(15)
+      > svg
+        display: block
     > input
       width: 100%
       height: 100%
       border: 0
       padding-left: pxToRem(60)
-      color: white
       font-size: pxToRem(16)
       line-height: (40 / 16)
-      grtskPeta()
+      grtskTeraSemiBold()
       &:focus
         outline: none
   &CitiesBox
@@ -38,7 +37,6 @@
     padding-left: pxToRem(60)
     padding-top: pxToRem(17)
     padding-right: pxToRem(20)
-    color: $GREY
     overflow: auto
   &CitiesItem
     white-space: nowrap
@@ -50,5 +48,3 @@
     grtskPeta()
   &CitiesItem:hover
       text-decoration: underline
-
-
