--- a/src/style/themes/sunny.styl
+++ b/src/style/themes/sunny.styl
@@ -58,3 +58,14 @@
 
   .try-button
     border: pxToRem(1) solid $BLACK
+
+  .menu
+    background-color: #FFFF00
+    border: pxToRem(1) solid #171717
+
+    .input
+      background-color: #171717
+      color: #FFFF00
+
+    .menuCitiesBox
+      color: #121212
