--- a/src/components/menu/styles.styl
+++ b/src/components/menu/styles.styl
@@ -9,6 +9,7 @@
   width: pxToRem(340)
   margin-top: pxToRem(10)
   z-index: 100
+  transform: translateZ(1px)
   +mobile()
     width: pxToRem(320)
   &Input
