:bug: Fix menu input's placeholder's color

--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -46,13 +46,10 @@
   .try-button
     border: pxToRem(1) solid $BLACK
 
-  .menu
-    background-color: #FFFFE8
-    border: pxToRem(1) solid #171717
-
-    .input
-      background-color: #171717
-      color: #FFFFE8
-
-    .menuCitiesBox
-      color: #121212
+  menuStyle(
+    bgColor: #FFFFE8,
+    inputColor: #FFFFE8,
+    inputBgColor: #171717,
+    itemsColor: #121212,
+    borderColor: #171717,
+  )
