:bug: Fix font rendering bug

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -28,6 +28,9 @@ html, body
   width: 100%
   color: $BLACK
 
+h1
+  font-weight: normal
+
 :root {
   font-family: 'Helvetica Neue', Helvetica, arial, sans-serif
   font-weight: normal
