:sparkles: Add cold theme and thunderstorm animations

--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -170,6 +170,13 @@
 
 @font-face {
   font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-Thin.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-Thin.otf") format("opentype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
   src:  url("/assets/fonts/GrtskZetta-ExtraLight.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-ExtraLight.otf") format("opentype");
   font-weight: 200;
