--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -128,6 +128,14 @@ grtskTeraBold()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 700
 
+grtskZettaThin()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 100, 'slnt' 0
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 100
+
 grtskZettaExtraLight()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
