:sparkles: Add drizzle animations

--- a/src/style/themes/sunny.styl
+++ b/src/style/themes/sunny.styl
@@ -20,7 +20,7 @@
       line-height: (125 / 120)
       grtskZettaMedium()
 
-  .gargantuanAlt
+  .sunny-up
     font-size: pxToRem(276)
     line-height: (276 / 270)
     letter-spacing: tracking(-40)
