:sparkles: Add snow animations

--- a/src/style/themes/snow.styl
+++ b/src/style/themes/snow.styl
@@ -19,11 +19,16 @@
       font-size: pxToRem(114)
       line-height: (103 / 114)
     .ll
+    .tt
       grtskMegaExtraLight()
       +tablet()
         grtskTeraExtraLight()
       +mobile()
         grtskPetaExtraLight()
+    .i
+      grtskPetaExtraLight()
+      +tablet()
+        grtskZettaExtraLight()
     .sn
       grtskMegaBold()
       +tablet()
