:sparkles: Add cookies popup

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -226,6 +226,14 @@ grtskMegaLight()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 300
 
+grtskMegaRegular()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 400, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 400
+
 grtskMegaMedium()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
