--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -58,6 +58,13 @@
 
 @font-face {
   font-family: "GrtskMega";
+  src:  url("/assets/fonts/GrtskMega-Regular.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-Regular.otf") format("opentype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "GrtskMega";
   src:  url("/assets/fonts/GrtskMega-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskMega-Medium.otf") format("opentype");
   font-weight: 500;
