--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -97,3 +97,23 @@ h2
     padding: pxToRem(10) 0 0
     &:after
       width: pxToRem(15)
+
+.cookies-popup
+  background-color: #171717
+  color: white
+  button
+    background-color: white
+    color: #171717
+
+.cloudy
+.thunderstorms
+.hail
+.night
+.smoky
+.foggy
+  .cookies-popup
+    background-color: white
+    color: #171717
+    button
+      background-color: #171717
+      color: white
