:sparkles: Add all the rest animations

--- a/src/style/themes/windy.styl
+++ b/src/style/themes/windy.styl
@@ -11,6 +11,8 @@
     font-size: pxToRem(234)
     line-height: (213 / 234)
     grtskZettaLight()
+    .windy-tbr
+      display: none
     .windy-with
       grtskTeraLight()
     .windy-the
@@ -18,6 +20,8 @@
     +tablet()
       font-size: pxToRem(168)
       line-height: (153 / 168)
+      .windy-tbr
+        display: block
       .windy-with
         grtskZettaLight()
       .windy-wind
