--- a/src/style/themes/haze.styl
+++ b/src/style/themes/haze.styl
@@ -15,11 +15,13 @@
     .haze-hazy-1
       display: block
       color: #D6D6D6
-      transform: translateX(pxToRem(165)) translateZ(1px)
+      transform: translateX(pxToRem(165))
     .haze-hazy-2
       display: block
       color: #8F8E98
       transform: translateX(pxToRem(-165)) translateY(pxToRem(-60))
+      padding-left: pxToRem(20)
+      margin-left: pxToRem(-20)
       text-shadow:
         pxToRem(-2) pxToRem(-2) 0 #D6D6D6,
         pxToRem(2) pxToRem(-2) 0 #D6D6D6,
@@ -30,7 +32,7 @@
       font-size: pxToRem(220)
       line-height: (201 / 220)
       .haze-hazy-1
-        transform: translateX(pxToRem(67)) translateZ(1px)
+        transform: translateX(pxToRem(67))
       .haze-hazy-2
         transform: translateX(pxToRem(-67)) translateY(pxToRem(-40))
         letter-spacing: tracking(0)
