--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -1,5 +1,6 @@
 @import '../../style/utils.styl'
 @import '../../style/media.styl'
+@import '../../style/font-utils.styl'
 
 // @font-face {
 //   font-family: 'GrtskLoading';
@@ -36,13 +37,13 @@
   min-height: 100%
   position: relative
   padding: pxToRem(60)
-  padding-bottom: pxToRem(130)
+  padding-bottom: pxToRem(100)
   display: flex
   flex-direction: column
   +tablet()
-    padding: pxToRem(60) pxToRem(80) pxToRem(130)
+    padding: pxToRem(60) pxToRem(80) pxToRem(100)
   +mobile()
-    padding: pxToRem(30) pxToRem(30) pxToRem(140)
+    padding: pxToRem(30) pxToRem(30) pxToRem(130)
 
 .slogan
   text-align: center
@@ -140,3 +141,22 @@
 
 .bottomMobile
   mobileOnly()
+
+.credits
+  margin-top: pxToRem(50)
+  a
+    text-decoration: underline
+  > span:not(:first-child):not(:last-child):after
+    content: ', '
+  +mobile()
+    > span
+      display: block
+    > span + span
+      margin-top: pxToRem(5)
+    > span:not(:first-child):not(:last-child):after
+      content: ''
+  &Title
+    grtskTeraSemiBold()
+    margin-right: pxToRem(5)
+    +mobile()
+      margin-right: 0
